Lesson 6 validation data
